--- a/Form2.resx
+++ b/Form2.resx
@@ -155,6 +155,10 @@
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>740, 571</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>Form2</value>
   </data>
