--- a/Form2.resx
+++ b/Form2.resx
@@ -915,24 +915,6 @@
   <data name="&gt;&gt;filterPanel.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
-  <data name="filterButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
-    <value>Flat</value>
-  </data>
-  <data name="filterButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="filterButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>79, 19</value>
-  </data>
-  <data name="filterButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
-  </data>
-  <data name="filterButton.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
-  </data>
-  <data name="filterButton.Text" xml:space="preserve">
-    <value>Filtrar</value>
-  </data>
   <data name="&gt;&gt;filterButton.Name" xml:space="preserve">
     <value>filterButton</value>
   </data>
@@ -966,6 +948,36 @@
   <data name="&gt;&gt;filterButtonPanel.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
+  <data name="filterButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Flat</value>
+  </data>
+  <data name="filterButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="filterButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>79, 19</value>
+  </data>
+  <data name="filterButton.Size" type="System.Drawing.Size, System.Drawing">
+    <value>75, 23</value>
+  </data>
+  <data name="filterButton.TabIndex" type="System.Int32, mscorlib">
+    <value>2</value>
+  </data>
+  <data name="filterButton.Text" xml:space="preserve">
+    <value>Filtrar</value>
+  </data>
+  <data name="&gt;&gt;filterButton.Name" xml:space="preserve">
+    <value>filterButton</value>
+  </data>
+  <data name="&gt;&gt;filterButton.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;filterButton.Parent" xml:space="preserve">
+    <value>filterButtonPanel</value>
+  </data>
+  <data name="&gt;&gt;filterButton.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="linePanel.Location" type="System.Drawing.Point, System.Drawing">
     <value>503, 371</value>
   </data>
@@ -989,6 +1001,36 @@
   </data>
   <data name="seriesPanel.AutoScroll" type="System.Boolean, mscorlib">
     <value>True</value>
+  </data>
+  <data name="label16.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label16.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Wide Latin, 27.75pt, style=Bold</value>
+  </data>
+  <data name="label16.Location" type="System.Drawing.Point, System.Drawing">
+    <value>19, 16</value>
+  </data>
+  <data name="label16.Size" type="System.Drawing.Size, System.Drawing">
+    <value>462, 46</value>
+  </data>
+  <data name="label16.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="label16.Text" xml:space="preserve">
+    <value>Carregando ...</value>
+  </data>
+  <data name="&gt;&gt;label16.Name" xml:space="preserve">
+    <value>label16</value>
+  </data>
+  <data name="&gt;&gt;label16.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;label16.Parent" xml:space="preserve">
+    <value>seriesPanel</value>
+  </data>
+  <data name="&gt;&gt;label16.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="seriesPanel.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 12</value>
@@ -1016,6 +1058,24 @@
   </data>
   <data name="plusButtonPictureBox.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Center</value>
+  </data>
+  <data name="plusButtonPictureBox.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHwAAAB8CAYAAACrHtS+AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAArNJREFUeF7tnf1t01AURzMCIzACG8Am7QawAWzACIzCKIzACPB+FlSovVFqYcfP
+        95wjnX9e81HlyHHa2NeXprwZfhx+H/4c/nqluW3u8zB8O5QT8Gm4JvI1fwzzWDIxX4ZVvP8xjykTskfs
+        v7qlT0b2t1WoLXWfPhHfhlWkLf06lEnY4kPaLfMcMgHvhlWgPcxzycF8GFZx9vD9UA7G4DAMDsPgMAwO
+        w+AwDA7D4DAMDsPgMAwOw+AwDA7D4DAMDsPgMAwOw+AwDA7D4DAMDsPgMAwOw+AwDA7D4DAMDsPgMAwO
+        w+AwDA7D4DAMDsPgMAwOw+AwDA7D4DAMDsPgG5JBdHlBZzZz0as4e5jnqn6HmVw9PDBDZDNX9B7jLHUf
+        0y7zZ28OBM6Y6OoB9Lxenfe+57xxPdYX0d2y+/s05D/v87m+R3Uj7WP267n4z+Xxz4L2N39lLJdtqn6o
+        /Uxr//wCuVzVofqB9rVc1L6Wi9rXclH7Wi5qX8tF7Wu5qH0tF7Wv5aL2tVzUvvqvVZDLv1b98oTj8uXJ
+        PQ8C1GN9GC5fivu23t8c5PJ0UKOHOPV3OfjhXz4Pqxvq+U3bEqP388WW/Zy8z+cgdvfr5zXtcjLJzRMR
+        npPTVnI+1cze8/NHtpbqd5jJ1acanY2cT1XF2cO8oHIwBodhcBgGh2FwGAaHYXAYBodhcBgGh2FwGAaH
+        YXAYBodhcBgGh2FwGAaHYXAYBodhcBgGh2FwGAaHYXAYBodhcBgGh2FwGAaHYXAYBodhcBgGh2FwGAaH
+        YXAYBodhcBgGh5FBdFWcPWw/9O4s3GNM6HI1AZmDzBWtIm1p5s/KJGSIbBVpS1cPqpV92XPI7tV543Is
+        e8x7N/bkZEvP9T2qeGvMh7Sbw+VlDrK/fRzmsk1rPsHntrlPQufiP824XH4D1AJTDWAxpy4AAAAASUVO
+        RK5CYII=
+</value>
   </data>
   <data name="plusButtonPictureBox.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
